# codyssey

./: .env.example  .gitignore  .golangci.yml  Makefile  README.md
backend/: Dockerfile  MIGRATIONS.md  go.mod  go.sum  handlers_test.go  main.go
backend/cmd/routecheck/: main.go
backend/internal/auth/: jwt.go  middleware.go  middleware_test.go  permissions.go  service.go
backend/internal/config/: config.go
backend/migrations/: 0001_create_problems.sql  0002_create_users.sql  0003_add_roles_to_users.sql  0004_add_password_hash_to_users.sql  0005_create_submissions.sql  0006_add_submission_metrics_and_logs.sql  0007_create_judge_runs.sql  0008_add_judge_runs_created_idx.sql
docs/: README.md  api_errors.md  architecture.md  auth-roles-permissions.md  changelog.md  contributing.md  development.md  domain-model.md  go-backend-api.md  go-backend.md  metrics.md  observability.md  openapi.md  openapi.yaml  project-structure.md  roadmap.md  setup.md
docs/adr/: ADR-0001-judging-state-machine-and-concurrency.md
docs/backend/: api.md  architecture.md  development.md  domain-model.md  errors.md  metrics.md  observability.md  openapi.md  overview.md  permissions.md  testing.md
docs/frontend/: api-client.md  architecture.md  auth.md  development.md  environment.md  overview.md  realtime.md
frontend/: Dockerfile  README.md  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
infra/: docker-compose.infra.yml  docker-compose.yml
python/: Dockerfile  main.py  pyproject.toml
python/tests/: test_health.py
(+80 files in other folders)
