[project]
name = "codyssey-ai"
version = "0.1.0"
description = "AI services (generation & detection) for Codyssey"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Codyssey" } ]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.uvicorn]
factory = false
