[project]
name = "codyssey-ai"
version = "0.1.0"
description = "AI services (generation & detection) for Codyssey"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "Codyssey" } ]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.uvicorn]
factory = false
